Prevent wrapping of columns.

--- a/js/Columns.css
+++ b/js/Columns.css
@@ -12,8 +12,8 @@
 	cursor: crosshair;
 }
 
-.Columns .Sortable {
-	display: inline-block;
+.Columns {
+	white-space: nowrap;
 }
 
 .Columns canvas {
