--- a/js/views/Sortable.css
+++ b/js/views/Sortable.css
@@ -1,9 +1,9 @@
 .Sortable-container {
     position: relative;
-    display: inline-block;
 	vertical-align: top;
 }
 
 .Sortable {
 	vertical-align: top;
+	display: inline-table;
 }
